# KMNIST

./: .gitignore  CONFIG.py  LICENSE  README.md  pyproject.toml
kmnist/: __init__.py  pseudo_labels.py
kmnist/analysis/: __init__.py  cli.py  embeddings.py  method_comparison.py  plots.py  projections.py  prototypes.py
kmnist/data/: __init__.py  datasets.py  loaders.py  transforms.py
kmnist/losses/: __init__.py  embedding_losses.py
kmnist/metrics/: __init__.py  reference.py
kmnist/models/: __init__.py  architecture.py  autoencoder.py
kmnist/submission/: __init__.py  cli.py  dataset.py  embeddings.py  ensemble.py  prediction.py  prototypes.py  tta.py  writer.py
kmnist/training/: __init__.py  staged_self_training.py  tensorboard_server.py  train.py
kmnist/utils/: __init__.py  checkpoints.py  device.py  paths.py
